tweak navbars, fix disappearing controls on mobile

--- a/hackohio/static/css/style.css
+++ b/hackohio/static/css/style.css
@@ -10,6 +10,7 @@ body {
     bottom: 0px;
     left: 0px;
     right: 0px;
+    z-index: -999;
 }
 
 .glowypanel {
@@ -88,7 +89,8 @@ body {
     margin-top: 20px;
 }
 
-.navbar-brand {
+.brand {
+    color: #0ce3ac;
     font-size: 64px;
     text-shadow: 0px 0px 4px #eee;
 }
@@ -265,4 +267,32 @@ body {
 
 .invisible {
     display: none;
+}
+
+/* Don't collpase navbars */
+.navbar-collapse.collapse {
+  display: block !important;
+}
+
+.navbar-nav>li, .navbar-nav {
+  float: left !important;
+}
+
+.navbar-nav.navbar-right:last-child {
+  margin-right: -15px !important;
+}
+
+.navbar-right {
+  float: right !important;
+}
+
+@media(max-width: 767px) {
+    #volume {
+        margin-top: 0.75em;
+    }
+}
+
+.branding .glyphicon-wrench {
+    font-size: 24px;
+    padding-top: 1em;
 }
